--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -13,4 +17,31 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+:root {
+  --light-color: rgb(218, 216, 216);
+}
+
+.tabItem {
+  cursor: pointer;
+  color:var(--light-color);
+}
+
+.selected {
+  color: black;
+  font-size: large;
+  font-weight: 600;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.selected::after {
+  content: "";
+  height: 3px;
+  width: 25px;
+  background-color: black;
+  position: absolute;
+  bottom: -5px;
 }
